--- a/Demo1.html
+++ b/Demo1.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Template String</h1>
+    Hello hello
     <script>
         var user = "Arun";
         // console.log("Hello"+user) //old method
